# ParticleSimulator

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  copy_resources.py  init.bat  vcpkg-configuration.json  vcpkg.json
cmake/: Shaders.cmake
resources/shaders/: gravityView.comp  particleView.frag
src/ParticleSimulator/: Camera.cpp  Camera.h  LibImpl.cpp  Main.cpp  RenderContext.cpp
src/ParticleSimulator/Helper/: FileHelper.cpp  FileHelper.h
src/ParticleSimulator/Rendering/: ParticleStructs.h  Renderer.cpp  Renderer.h
src/ParticleSimulator/Rendering/RenderPass/: ComputePass.cpp  ComputePass.h  GravityViewPass.cpp  GravityViewPass.h  ParticleViewPass.cpp  ParticleViewPass.h
src/ParticleSimulator/VKObject/: VKBuffer.h  VKContext.cpp  VKContext.h  VKDescriptorSet.cpp  VKDescriptorSet.h  VKDescriptorSetLayout.cpp  VKDescriptorSetLayout.h  VKDescriptorSetLayoutBuilder.cpp  VKDescriptorSetLayoutBuilder.h  VKDynamic.h  VKImage.cpp  VKImage.h  VKImageBase.cpp  VKImageBase.h  VKObject.h  VKPtr.h  VKShader.cpp  VKShader.h  VKSwapchain.cpp  VKSwapchain.h  VKSwapchainImage.cpp  VKSwapchainImage.h  VKSwapchainSemaphore.cpp  VKSwapchainSemaphore.h
src/ParticleSimulator/VKObject/Buffer/: VKBuffer.h  VKBufferBase.h
src/ParticleSimulator/VKObject/CommandBuffer/: VKCommandBuffer.cpp  VKCommandBuffer.h
src/ParticleSimulator/VKObject/DescriptorSet/: VKDescriptorSet.cpp  VKDescriptorSet.h  VKDescriptorSetLayout.cpp  VKDescriptorSetLayout.h  VKDescriptorSetLayoutInfo.cpp  VKDescriptorSetLayoutInfo.h
src/ParticleSimulator/VKObject/Dynamic/: VKDynamicBuffer.h  VKDynamicCommandBuffer.cpp  VKDynamicCommandBuffer.h  VKDynamicDescriptorSet.cpp  VKDynamicDescriptorSet.h  VKDynamicFence.cpp  VKDynamicFence.h  VKDynamicImage.cpp  VKDynamicImage.h  VKDynamicSemaphore.cpp  VKDynamicSemaphore.h
src/ParticleSimulator/VKObject/Fence/: VKFence.cpp  VKFence.h
src/ParticleSimulator/VKObject/Image/: VKImage.cpp  VKImage.h  VKImageBase.cpp  VKImageBase.h  VKSwapchainImage.cpp  VKSwapchainImage.h
src/ParticleSimulator/VKObject/Pipeline/: VKComputePipeline.cpp  VKComputePipeline.h  VKGraphicsPipeline.cpp  VKGraphicsPipeline.h  VKPipeline.cpp  VKPipeline.h  VKPipelineAttachmentInfo.cpp  VKPipelineAttachmentInfo.h  VKPipelineLayout.cpp  VKPipelineLayout.h  VKPipelineLayoutInfo.cpp  VKPipelineLayoutInfo.h  VKPipelineViewport.h
src/ParticleSimulator/VKObject/Queue/: VKQueue.cpp  VKQueue.h
src/ParticleSimulator/VKObject/Sampler/: VKSampler.cpp  VKSampler.h
src/ParticleSimulator/VKObject/Semaphore/: VKSemaphore.cpp  VKSemaphore.h
src/ParticleSimulator/VKObject/Shader/: VKShader.cpp  VKShader.h
src/cpp/ParticleSimulator/: Camera.cpp  Camera.h  Main.cpp  RenderContext.h
src/cpp/ParticleSimulator/Helper/: MathHelper.cpp
src/cpp/ParticleSimulator/Rendering/: ParticleData.h  Renderer.cpp  Renderer.h
src/cpp/ParticleSimulator/Rendering/RenderPass/: ComputePass.cpp  ComputePass.h  GravityViewPass.cpp  GravityViewPass.h  ParticleViewPass.cpp  ParticleViewPass.h
src/cpp/ParticleSimulator/VKObject/: VKContext.cpp  VKContext.h  VKDynamic.h  VKObject.cpp  VKObject.h  VKPtr.h  VKSwapchain.cpp  VKSwapchain.h
src/cpp/ParticleSimulator/VKObject/Buffer/: VKBuffer.h  VKBufferBase.h
src/cpp/ParticleSimulator/VKObject/CommandBuffer/: VKCommandBuffer.cpp  VKCommandBuffer.h
src/cpp/ParticleSimulator/VKObject/DescriptorSet/: VKDescriptorSet.cpp  VKDescriptorSet.h  VKDescriptorSetLayout.cpp  VKDescriptorSetLayout.h  VKDescriptorSetLayoutInfo.cpp  VKDescriptorSetLayoutInfo.h
src/cpp/ParticleSimulator/VKObject/Fence/: VKFence.cpp  VKFence.h
src/cpp/ParticleSimulator/VKObject/Image/: VKImage.cpp  VKImage.h  VKImageBase.cpp  VKImageBase.h  VKSwapchainImage.cpp  VKSwapchainImage.h
src/cpp/ParticleSimulator/VKObject/Pipeline/: VKComputePipeline.cpp  VKComputePipeline.h  VKGraphicsPipeline.cpp  VKGraphicsPipeline.h  VKPipeline.cpp  VKPipeline.h  VKPipelineAttachmentInfo.cpp  VKPipelineAttachmentInfo.h  VKPipelineLayout.cpp  VKPipelineLayout.h  VKPipelineLayoutInfo.h  VKPipelineViewport.h
src/cpp/ParticleSimulator/VKObject/Queue/: VKQueue.cpp  VKQueue.h
src/cpp/ParticleSimulator/VKObject/Sampler/: VKSampler.cpp  VKSampler.h
src/cpp/ParticleSimulator/VKObject/Semaphore/: VKSemaphore.cpp  VKSemaphore.h
src/cpp/ParticleSimulator/VKObject/Shader/: VKShader.cpp  VKShader.h
src/glsl/: particleView.vert  simulateParticles.comp
src/slang/: common.slang  gravityView.slang  particleView.slang  simulateParticles.slang
vcpkg/overlay-ports/cyphgpu/: portfile.cmake  vcpkg.json
vcpkg/overlay-ports/slang/: portfile.cmake  vcpkg.json
vcpkg/overlay-ports/tracy/: 0001-public-client-Correctly-initialize-atomic-thread-ref.patch  portfile.cmake  vcpkg.json
vcpkg/overlay-ports/vulkan-memory-allocator/: CMakeLists.txt  config.cmake.in  portfile.cmake  vcpkg.json
vcpkg/toolchains/: windows-clang-cl.cmake  windows-msvc.cmake
